Refactor HTML structure and style for Valentine page

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ button {
         I Love You Forever 💕🎉
     </div>
 
-    <img id="loveImage" src="D:/Wedding Files/pre wed/DSC01538.JPG" alt="Our Memory">
+    <img id="loveImage" src="DSC01538.JPG" alt="Our Memory">
 
     <audio id="loveSong">
-        <source src="C:/Users/Hp/Downloads/Eppadi Vandhaayo.mp3" type="audio/mpeg">
+        <source src="Eppadi Vandhaayo.mp3" type="audio/mpeg">
     </audio>
 </div>
 
@@ -147,3 +147,4 @@ function nextQuestion() {
 
 </body>
 </html>
+
