--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ button {
         I Love You Forever 💕🎉
     </div>
 
-    <img id="loveImage" src="DSC01538.JPG" alt="Our Memory">
+    <img id="loveImage" src="./DSC01538.JPG" alt="Our Memory">
 
     <audio id="loveSong">
-        <source src="Eppadi Vandhaayo.mp3" type="audio/mpeg">
+        <source src="./Eppadi Vandhaayo.mp3" type="audio/mpeg">
     </audio>
 </div>
 
@@ -147,4 +147,5 @@ function nextQuestion() {
 
 </body>
 </html>
+
 
